tests/error/struct_errors/keywords.py
from guppylang.decorator import guppy
from guppylang.module import GuppyModule


module = GuppyModule("test")


@guppy.struct(module)
class MyStruct(metaclass=type):
    x: int


module.compile()
