tests/error/struct_errors/keywords.err
Error: Unexpected keyword (at $FILE:9:15)
  | 
7 | 
8 | @guppy.struct(module)
9 | class MyStruct(metaclass=type):
  |                ^^^^^^^^^^^^^^ Unexpected keyword

Guppy compilation failed due to 1 previous error
